static/sass/partials/_topbar.sass
@import susy
@import compass/typography/links
@import compass/css3
@import variables
@import layout

$logo-height: image-height('logo.png')

.logo-bar
  @extend .container
  margin: 20px auto
  height: $logo-height

.logo-img
  display: inline-block
  padding-left: 10px

.search-bar
  margin-left: 160px
  display: inline-block
  vertical-align: top
  font-size: 14px

.category
  ul li
    display: inline-block
    padding: 0
    margin: 0
    list-style: none

.category-anchor
  padding: 2px 10px
  margin: 0
  +link-colors($dark-gray)
  text-decoration: none

  &:hover, &:active, &.active
    background-color: $red
    color: white
    border-top-left-radius: 3px
    border-top-right-radius: 3px

.input-bar
  border: 2px solid $red
  min-height: 20px
  border-radius: 2px
  border-top-left-radius: 0
  margin: 0
  padding: 0
  vertical-align: middle
  font-size: $font-s

  span
    padding: 10px
    vertical-align: middle
    color: #818181

.header-asset
  position: relative
  display: inline-block

#header-asset-unit
  position: absolute
  right: 5px
  top: 2px
  padding: 0
  margin: 0
  color: $dark-gray
  font-size: 13px

.header-input-base
  border: 0
  border-radius: 0
  margin: 0
  padding: 5px
  min-height: 23px
  height: 26px
  vertical-align: middle

a.header-button
  @extend .header-input-base
  background-color: $red
  margin: 0
  padding: 5px 20px
  color: white
  text-decoration: none

.user-info
  float: right
  color: $black
  margin-top: 20px

  a
    font-size: $font-s
    +hover-link
    padding: 5px

    &:first-child
      border-left: 0

.user-center
  position: relative
  display: inline-block
  margin: 0 5px
  color: $blue-gray

#username
  font-size: $font-s
  padding: 5px
  min-width: 100px
  text-align: center

.username-hover
  background-color: white
  color: $red

#user-items
  position: absolute
  background-color: white
  display: none
  left: 0
  top: 100%
  width: 100%
  line-height: $font-s

  li
    text-align: center
    padding: 10px

    &:first-child
      border-bottom: 1px dotted $light-gray-text

